<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="movie_thumbnail_desc">Movie thumbnail</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="release_date_label">Release date:</string>
    <string name="movie_demo_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices accumsan nulla vitae imperdiet. Nullam ante libero, congue a sapien sit amet, egestas dapibus nisl. Cras pulvinar odio ut lorem sollicitudin placerat. Sed vel nisi rhoncus, fringilla eros sed, tristique turpis.  Inon euismod mauris gravida eu. Fusce efficitur at ligula lacinia malesuada.</string>
    <string name="average_votes_label">Average votes:</string>
    <string name="image_poster_movie">Image of movie poster</string>
    <string name="action_details">Movie details</string>
    <string name="favourites">Favourites</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="play_button_desc">Trailer\'s play image button</string>
    <string name="image_movie_poster_desc">Trailer\'s thumbnail image</string>
    <string name="text_review_content">Contetnt of text review</string>
    <string name="movie_review_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="btn_close_dialog_review">Close</string>
    <string name="no_fav_movies_msg">You have not added any movies to  list yet.</string>
    <string name="sorting_most_popular">Sorting by most popular</string>
    <string name="sorting_top_rated">Sorting by top rated</string>
    <string name="showing_fav_movie_list_msg">Favourite movies list</string>
    <string name="presenting_movies_default_error">Some Error Bro! :(</string>
    <string name="desc_image_fav_movie_poster">ImageView for displaying movie poster of favourite film</string>
    <string name="desc_image_icon_zoom_review">Magnifier icon for displaying full review</string>
    <string name="label_rating_fav_movie">Rating:</string>
    <string name="label_fav_votes_amount">Votes amount:</string>
    <string name="button_remove_fav">Remove</string>
</resources>
