<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_fav_movie_poster"
                android:layout_width="170dp"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/example_image"
                android:contentDescription="@string/desc_image_fav_movie_poster" />

            <TextView
                android:id="@+id/text_fav_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Interstellar" />

            <RatingBar
                android:id="@+id/rating_bar_fav_movie"
                style="@android:style/Widget.Material.RatingBar.Small"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="10"
                android:stepSize="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_fav_relase_date_movie"
                tools:targetApi="lollipop" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="250dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/image_fav_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_fav_relase_date_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_fav_movie_title"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:text="(2008)" />

            <TextView
                android:id="@+id/label_rating_fav_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_rating_fav_movie"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar_fav_movie" />

            <TextView
                android:id="@+id/text_rating_fav_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="end"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_rating_fav_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/divider"
                tools:text="9.2/10" />

            <TextView
                android:id="@+id/label_rating_votes_fav_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_fav_votes_amount"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/label_rating_fav_movie" />

            <TextView
                android:id="@+id/text_fav_votes_amout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="end"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_rating_votes_fav_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/divider"
                tools:text="1536" />

            <Button
                android:id="@+id/button_remove_favourite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/button_remove_fav"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_fav_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/label_rating_votes_fav_movie" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

</LinearLayout>